crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__fields_tests__field_expression.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/fields_tests.rs
---
Q = (call function: (identifier))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "call"
      Field
        Id "function"
        Colon ":"
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
      ParenClose ")"
