crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__fields_tests__fields_with_quantifiers_and_captures.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/fields_tests.rs
---
Q = (node foo: (bar)* @baz)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "node"
      Capture
        Quantifier
          Field
            Id "foo"
            Colon ":"
            Tree
              ParenOpen "("
              Id "bar"
              ParenClose ")"
          Star "*"
        CaptureToken "@baz"
      ParenClose ")"
