crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__fields_tests__mixed_children_and_fields.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/fields_tests.rs
---
Q = (if
    condition: (expr)
    (then_block)
    else: (else_block))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "if"
      Field
        Id "condition"
        Colon ":"
        Tree
          ParenOpen "("
          Id "expr"
          ParenClose ")"
      Tree
        ParenOpen "("
        Id "then_block"
        ParenClose ")"
      Field
        Id "else"
        Colon ":"
        Tree
          ParenOpen "("
          Id "else_block"
          ParenClose ")"
      ParenClose ")"
